--- a/treasurehunt.css
+++ b/treasurehunt.css
@@ -18,15 +18,28 @@ td{
   height: 100px;
   width: 100px;
   text-align: center;
+  font-size: 50px;
 }
 #snuggles{
   text-align: center;
 }
 #instructions{
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+td:hover{
+  color: blue;
+}
+#win-lose {
+  color: black;
+  background-color: white;
+  margin-left: 20%;
+  margin-right: 20%;
+  font-size: 35px;
 }
